Improved visibility bug

--- a/assets/css/tw-sliders.css
+++ b/assets/css/tw-sliders.css
@@ -4,6 +4,7 @@
 
 .slider-inner {	
 	clear: both;
+	visibility: hidden;
 	float: left;
 	margin-bottom: 25px;
 	position: relative;
